; ModuleID = '/home/carl/AnghaBench/openwrt/package/kernel/broadcom-wl/src/extr_wlc.c_wlc_wdsmac.c'
source_filename = "/home/carl/AnghaBench/openwrt/package/kernel/broadcom-wl/src/extr_wlc.c_wlc_wdsmac.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@interface = common dso_local global i32 0, align 4
@WLC_WDS_GET_REMOTE_HWADDR = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, i8*, i8*)* @wlc_wdsmac to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @wlc_wdsmac(i32 %0, i8* %1, i8* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i8*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca [6 x i8], align 1
  %8 = alloca i32, align 4
  store i32 %0, i32* %4, align 4
  store i8* %1, i8** %5, align 8
  store i8* %2, i8** %6, align 8
  store i32 0, i32* %8, align 4
  %9 = load i32, i32* @interface, align 4
  %10 = load i32, i32* @WLC_WDS_GET_REMOTE_HWADDR, align 4
  %11 = bitcast [6 x i8]* %7 to i8**
  %12 = call i32 @wl_ioctl(i32 %9, i32 %10, i8** %11, i32 6)
  store i32 %12, i32* %8, align 4
  %13 = load i32, i32* %8, align 4
  %14 = icmp eq i32 %13, 0
  br i1 %14, label %15, label %19

15:                                               ; preds = %3
  %16 = getelementptr inbounds [6 x i8], [6 x i8]* %7, i64 0, i64 0
  %17 = load i8*, i8** %6, align 8
  %18 = call i32 @my_ether_ntoa(i8* %16, i8* %17)
  br label %19

19:                                               ; preds = %15, %3
  %20 = load i32, i32* %8, align 4
  ret i32 %20
}

declare dso_local i32 @wl_ioctl(i32, i32, i8**, i32) #1

declare dso_local i32 @my_ether_ntoa(i8*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
